Trigger change event when there is a change in the network quality

The change event is now triggered even when
NetInfoDownlinkMaxEnabled() returns false.

Bug: 762740
Change-Id: Icb7be612785873c7db5f7523f090235c30053129
Reviewed-on: https://chromium-review.googlesource.com/654221
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Reviewed-by: Josh Karlin <jkarlin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#500685}
Former-commit-id: 113f83e4eb61250981902bb8b82662198a7185c2